parent generation done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,136 @@
 <html>
-    <head>
-        <title>Family Tree</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="box">
-            <div class="pic"><img src="images/Me.jpg"></div>
-            <div class="name">Jonathan Ryndolf</div>
-        </div>
-    </body>
+  <head>
+    <title>Family Tree</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="row">
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Edwin Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Reginald Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Akila Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Mervin Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Madona Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Madhan Ryndolf</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">James</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">James</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Ashish</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Ashish Sis</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Richard Anna</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Ruby Akka</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Shanth Anna</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Sharon</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Tinku Chithapa</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Kruthi Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Viku Chithapa</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Raji Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Priya</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Mama</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Chithi</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Chithapa</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Dhivya Akka</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Diana Akka</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Sweety Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Chintu Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Lovely Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Bobby Anna</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Anna Akka</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="box">
+        <div class="pic"><img src="images/Me.jpg" /></div>
+        <div class="name">Jonathan Ryndolf</div>
+      </div>
+    </div>
+  </body>
 </html>
