--- a/index.html
+++ b/index.html
@@ -7,6 +7,96 @@
     <div class="row">
       <div class="box">
         <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Thatha sis</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Swaminathan Thatha</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Paty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Glori Paty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Jayanth Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Viji Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Ravi Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Raju Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Shanthi Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Athamma</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Vijay Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Thatha</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Amamma</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Roop Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Akila Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Pamila Paty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Joy Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Prem Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Karsana Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Sasi Aunty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Sam Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Joyce Paty</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
         <div class="name">Edwin Uncle</div>
       </div>
       <div class="box">
