my generation done

--- a/index.html
+++ b/index.html
@@ -218,8 +218,60 @@
     </div>
     <div class="row">
       <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Griffin Anna</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Griffa Akka</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Riya</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Richa</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Atul Anna</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Rajat Anna</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Christa</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Lionel</div>
+      </div>
+      <div class="box">
         <div class="pic"><img src="images/Me.jpg" /></div>
         <div class="name">Jonathan Ryndolf</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Sweety</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Jiju</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Prathi</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Monu</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Amamma</div>
       </div>
     </div>
   </body>
