--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <div class="row">
       <div class="box">
         <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Chinapilai</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Thapi</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Joe Uncle</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Pandi Thatha</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Arputharaj Thatha</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Grace Paty</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">William Thatha</div>
+      </div>
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="name">Evelyn Paty</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="box">
+        <div class="pic"><img src="images/.jpg" /></div>
         <div class="name">Thatha sis</div>
       </div>
       <div class="box">
