--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="name">Pandi Thatha</div>
       </div>
       <div class="box">
-        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="pic"><img src="images/arputharaj.jpg" /></div>
         <div class="name">Arputharaj Thatha</div>
       </div>
       <div class="box">
-        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="pic"><img src="images/grace.jpg" /></div>
         <div class="name">Grace Paty</div>
       </div>
       <div class="box">
@@ -60,11 +60,11 @@
         <div class="name">Jayanth Uncle</div>
       </div>
       <div class="box">
-        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="pic"><img src="images/viji.jpg" /></div>
         <div class="name">Viji Aunty</div>
       </div>
       <div class="box">
-        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="pic"><img src="images/ravi.jpg" /></div>
         <div class="name">Ravi Uncle</div>
       </div>
       <div class="box">
@@ -167,18 +167,19 @@
       </div>
       <div class="box">
         <div class="pic"><img src="images/.jpg" /></div>
-        <div class="name">Ashish Sis</div>
+        <div class="name">Smrithi</div>
       </div>
       <div class="box">
         <div class="pic"><img src="images/.jpg" /></div>
         <div class="name">Richard Anna</div>
       </div>
       <div class="box">
-        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="pic"><img src="images/ruby.jpg" /></div>
         <div class="name">Ruby Akka</div>
+        <div class="name">Angel Ruby</div>
       </div>
       <div class="box">
-        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="pic"><img src="images/shanth.jpg" /></div>
         <div class="name">Shanth Anna</div>
       </div>
       <div class="box">
@@ -186,7 +187,7 @@
         <div class="name">Sharon</div>
       </div>
       <div class="box">
-        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="pic"><img src="images/tinku.jpg" /></div>
         <div class="name">Tinku Chithapa</div>
       </div>
       <div class="box">
@@ -194,7 +195,7 @@
         <div class="name">Kruthi Aunty</div>
       </div>
       <div class="box">
-        <div class="pic"><img src="images/.jpg" /></div>
+        <div class="pic"><img src="images/viku.jpg" /></div>
         <div class="name">Viku Chithapa</div>
       </div>
       <div class="box">
